@@ -45,5 +45,5 @@ software out of the goodness of their hearts though :-)
 ------------------------------------------------------------------------------
 
 This application contains not yet accepted upstream changes, fixes and
-improvements which are Copyright (c) 2007-2011 GCCSDK Developers and
+improvements which are Copyright (c) 2007-2014 GCCSDK Developers and
 contributors.
